# Byggern-Embedded-Systems-Project

./: .gitignore  README.md  adc.c  adc.h  byggern.componentinfo.xml  byggern.cproj  can.c  can.h  can_interrupt.c  can_interrupt.h  debug.c  debug.h  fonts.h  gui.c  gui.h  joystick.c  joystick.h  main.c  mcp2515.c  mcp2515.h  mem.c  mem.h  oled.c  oled.h  pwm.h  spi.c  spi.h  usart.c  usart.h  utilities.c  utilities.h
Debug/: Makefile  adc.d  byggern.elf  byggern.hex  byggern.lss  byggern.map  byggern.srec  can.d  can_interrupt.d  debug.d  gui.d  joystick.d  main.d  makedep.mk  mcp2515.d  mem.d  oled.d  spi.d  usart.d  utilities.d
docs/: node1.md  node2.md  pubkey
node1/: adc.c  adc.h  byggern.atsln  byggern.cproj  can.c  can.h  can_interrupt.c  can_interrupt.h  debug.c  debug.h  gui.c  gui.h  joystick.c  joystick.h  main.c  mcp2515.c  mcp2515.h  (+12 more)
node3/: CMakeLists.txt  ball_tracking.cpp  ball_tracking.py  main.cpp  marker_calibration.cpp  marker_calibration.h  marker_detection.cpp  marker_detection.h  marker_tracking.cpp  marker_tracking.h  serial_transmit.cpp  serial_transmit.h  tutorial_camera_params.yml  visualization.cpp  visualization.h
node3/.cache/clangd/index/: ball_tracking.cpp.4F963073472C9153.idx  marker_calibration.cpp.9ABDDFE5DE55A938.idx  marker_detection.cpp.2A1F9F057EE339A8.idx  marker_detection.h.E051900F6DC4CE01.idx  serial_transmit.cpp.B7A2E36A0AD9BD03.idx  serial_transmit.h.60977390C4136D1D.idx
node3/can_forwarder/: Makefile  can.c  forwarder.ino  main.c  mcp2515.c  mcp2515.h  spi.c  spi.h
node3/tracking/: ball_tracking.cpp  ball_tracking.h
(+32 files in other folders)
